# Python

Project/: LICENSE.txt  README.md  pyproject.toml
Project/src/motloch/: __init__.py  motloch.py
Project/src/motloch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
