[project]
name = "motloch"
version = "1.1"
authors = [
  { name="Maria Volochnyuk", email="mariyav14012010@gmail.com" },
]
description = "A small example package."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.scripts]
clean-folder = "motloch.motloch:main"